[gd_scene load_steps=8 format=3 uid="uid://jyrbd77wm23x"]

[ext_resource type="Script" uid="uid://ct4l1ftf662b0" path="res://scripts/bat.gd" id="1_0qrlu"]
[ext_resource type="Texture2D" uid="uid://cewc5txyho5mc" path="res://assets/weapons/bat/bat1.png" id="1_7ap64"]
[ext_resource type="Texture2D" uid="uid://c722nra5k0wur" path="res://assets/weapons/bat/bat2.png" id="2_0qrlu"]
[ext_resource type="Texture2D" uid="uid://ch6v0tsb2cslu" path="res://assets/weapons/bat/bat3.png" id="3_46bv4"]
[ext_resource type="Texture2D" uid="uid://0v0wauqhy0n0" path="res://assets/weapons/bat/bat4.png" id="4_85nji"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qixwx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7ap64")
}, {
"duration": 1.0,
"texture": ExtResource("2_0qrlu")
}, {
"duration": 1.0,
"texture": ExtResource("3_46bv4")
}, {
"duration": 1.0,
"texture": ExtResource("4_85nji")
}],
"loop": false,
"name": &"atk",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ap64"]
size = Vector2(30, 14)

[node name="Bat" type="Area2D"]
texture_filter = 1
collision_layer = 4
collision_mask = 2
script = ExtResource("1_0qrlu")
damage = 100
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qixwx")
animation = &"atk"
frame = 1
frame_progress = 0.328682

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7ap64")

[node name="AtkTimer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="AtkTimer" to="." method="_on_atk_timer_timeout"]
